gitops/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bugatti-shop-dev
  labels:
    name: bugatti-shop-dev
    environment: dev
    app: bugatti-shop

# Made with Bob
